--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,17 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -19,8 +5,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid #000000;
   margin: 0 7.5px 15px;
+  overflow: hidden;
+
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -30,7 +21,26 @@
     margin-left: 7.5px;
   }
 
+  &:hover {
+    cursor: pointer;
+    .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(.25, .45, .45, .95);
+    }
+    .content {
+      opacity: .9;
+    }
+  }
+
+  .background-image {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+
   .content {
+    position: absolute;
     height: 90px;
     padding: 0 25px;
     display: flex;
@@ -38,10 +48,13 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: white;
+    opacity: 0.7;
+    transition: opacity ease-out 200ms;
 
     .title {
       font-weight: bold;
-      margin-bottom: 6px;
+      margin: 0 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
     }
