--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@ body {
   padding: 20px 50px;
   font-family: 'Open Sans Condensed', sans-serif;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
